--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+
+/* Class for regular weight */
+.karla-regular {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Regular */
+  font-style: normal;
+}
+
+/* Class for bold weight */
+.karla-bold {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700; /* Bold */
+  font-style: normal;
+}
+
+/* Class for light weight */
+.karla-light {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300; /* Light */
+  font-style: normal;
+}
+
+/* Class for medium weight */
+.karla-medium {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Medium */
+  font-style: normal;
+}
+
+/* Class for extra bold weight */
+.karla-extrabold {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800; /* Extra Bold */
+  font-style: normal;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -38,5 +79,5 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #ffffff;
 }
