--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,14 +17,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  font-family: Arial, sans-serif;
+}
 
+h1, h2 {
+  color: #000000;
+}
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1E74FD;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #1E74FD;
 }
 
 body {
@@ -52,7 +58,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #1E74FD;
 }
 button:focus,
 button:focus-visible {
@@ -68,6 +74,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #000000;
   }
 }
