--- a/frontend/src/Sidebar.css
+++ b/frontend/src/Sidebar.css
@@ -12,10 +12,84 @@
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.logowhite img {
+.logowhite {
   width: 60px;
-  margin-top: 0px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 20px;
+}
+
+.nav {
+  width: 80px;
+  background-color: transparent;
+}
+
+.nav button{
+  outline: none;
+  border: none;
+  border-color: transparent;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav button:focus{
+  outline: none;
+  border: none;
+}
+
+.nav:hover{
+  border-color: transparent;
+  background-color: white;
+}
+
+.nav:hover .nav-elements{
+  border-color: transparent;
+  color: #007bff;
+}
+
+.nav-exit{
+  width: 80px;
+  background-color: transparent;
+  position: fixed;
+  bottom: 0;
+}
+
+.nav-exit button{
+  outline: none;
+  border: none;
+  border-color: transparent;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-exit button:focus{
+  outline: none;
+  border: none;
+}
+
+.nav-exit:hover{
+  border-color: transparent;
+  background-color: white;
+}
+
+.nav-exit:hover .nav-elements{
+  border-color: transparent;
+  color: #007bff;
+}
+
+.nav-elements{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  vertical-align: bottom;
+  font-size: 0.9em;
+  color: white;
+  text-align: center;
 }
 
 .sidebar nav ul {
