--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
-
+/* comment for a change */
 /* Class for regular weight */
 .karla-regular {
   font-family: "Karla", sans-serif;
