--- a/frontend/src/Profile.css
+++ b/frontend/src/Profile.css
@@ -5,7 +5,7 @@
     margin-left: 40px;
     margin-top: 16px;
 }
-
+/* comment for a change */
 .profile-container{
   height: 300px;
   width: 720px;
