--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -8,7 +8,6 @@
     align-items: center;
     height: 100vh;
 }
-/* comment for a change */
 body {
     display: flex;
     flex-direction: column;
@@ -22,22 +21,34 @@ body {
 }
 .login-container { 
     background: white;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 400px;
     margin: auto;
     text-align: center;
+    box-sizing: border-box;
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
 h1 {
+    margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: bold;
 }
+
 .form-group {
+    margin-top: 10px;
     margin-bottom: 15px;
     text-align: left;
+    color: black;
+}
+
+.form-group input[type="checkbox"] {
+    width: auto;
+    margin-right: 10px;
 }
 
 label {
@@ -46,14 +57,28 @@ label {
     color: rgb(0, 0, 0);
 }
 
+
 input {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: white;
+    color: black; 
 }
 
+
 button {
+    background-color: #1E74FD;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.toggle-button {
     background-color: #1E74FD;
     color: white;
     border: none;
@@ -67,7 +92,26 @@ button:hover {
     background-color: #1E74FD;
 }
 
+.toggle-button:hover {
+    background-color: #363636;
+}
+
 .register-link {
     margin-top: 15px;
     color:rgb(80, 80, 80);
+}
+.error-message {
+    color: red;
+    font-size: 0.9rem;
+    margin-top: -10px;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.success-message {
+    color: green;
+    font-size: 0.9rem;
+    margin-top: -10px;
+    margin-bottom: 15px;
+    text-align: left;
 }
