--- a/frontend/src/Sidebar.css
+++ b/frontend/src/Sidebar.css
@@ -23,6 +23,7 @@
 
 .nav {
   width: 80px;
+  height: 80px;
   background-color: transparent;
 }
 
@@ -31,6 +32,12 @@
   border: none;
   border-color: transparent;
   background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav div{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +58,14 @@
   color: #007bff;
 }
 
-.nav:hover .nav-courses{
+.nav-dropdown:hover {
+  background-color: white;
+  border-color: transparent;
+  color: #007bff;
+}
+
+.nav-dropdown:hover .nav-courses{
+  background-color: white;
   border-color: transparent;
   color: #007bff;
 }
@@ -89,6 +103,10 @@
 }
 
 #dropdown-button-drop-end{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  user-select: none;
   width: 80px;
 }
 
@@ -113,7 +131,6 @@
 }
 
 .nav-courses{
-  padding-left: 13.1875px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -122,6 +139,29 @@
   color: white;
   text-align: center;
 }
+
+.nav-dropdown{
+  width: 80px;
+  height: 80px;
+  padding-top: 14.203px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-dropdown .dropdown-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-dropdown .dropdown-toggle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .sidebar nav ul {
   list-style-type: none;
   padding: 0;
