--- a/frontend/src/Course.css
+++ b/frontend/src/Course.css
@@ -75,6 +75,7 @@
 .assignment-list{
     margin-top: 30px;
     margin-left: 20px;
+    padding-left: 20px;
     width: 680px;
     overflow-y: auto;
 }
